[04-recipe-page] design: fix .nutrition gap

--- a/src/04-recipe-page/styles.scss
+++ b/src/04-recipe-page/styles.scss
@@ -190,6 +190,7 @@ body > footer {
 .recipe-container .nutrition {
   @extend %list-section;
 
+  gap: 0;
   margin-bottom: 0;
 
   @include font-outfit;
